updates to how it works + footer + fixed alignment issue on course page

--- a/polymath/core/static/css/newstylesheet.css
+++ b/polymath/core/static/css/newstylesheet.css
@@ -37,10 +37,11 @@ body {
 	margin-top: -30px; /* negative value of footer height */
 	height: 30px;
 	clear:both;
-	font-size:12px;
+	font-size:13px;
 	color:#555;
-	text-shadow:0px 1px 2px white;
+	text-shadow:0px -1px 2px white;
 	padding-top:10px;
+	font-weight:bold;
 	}
 
 h1,
@@ -1571,6 +1572,10 @@ a.label.success{
 	color:#0a580b;
 	background-color:#d7dead;
 	line-height:2.5;
+	border-radius:4px;
+	-moz-border-radius:4px;
+	-webkit-border-radius:4px;
+	border:1px solid #ccc;
 }
 
 a.label:hover{
@@ -6394,6 +6399,7 @@ textarea.error { border: 1px dotted red; }
 	height:50px;
 	padding-top:0px;
 	padding-right:0px!important;
+
 }
 
 .previewimages span{
@@ -6449,17 +6455,20 @@ textarea.error { border: 1px dotted red; }
 	z-index:12;
 	position:absolute;
 	margin-left:760px;
-	height:30px;
+	height:20px;
 	background:#d9d6ce;
 	box-shadow:0px 1px 1px rgba(0,0,0,0.15);
 	-webkit-box-shadow:0px 1px 1px rgba(0,0,0,0.15);
-	padding-top:20px;
-	margin-top:140px;
+	padding-top:10px;
+	margin-top:150px;
 	padding-left:5px;
 	padding-right:5px;
-	opacity:0.80;
+	opacity:0.90;
 	display:block;
-	width:10px;
+	width:20px;
+	border-radius:6px;
+	-moz-border-radius:6px;
+	-webkit-border-radius:6px;
 }
 
 #nextbutton:hover{
